[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/background/student homepage bg.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons or icons/sound on icon.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/mail icon.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/sound off icon.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/challenge icon.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons or icons/quit icon.png" type="Texture" id=6]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/tower/metal castle.png" type="Texture" id=8]
[ext_resource path="res://sprites/tower/cream castle.png" type="Texture" id=9]
[ext_resource path="res://sprites/tower/wood castle.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons or icons/ratio label.png" type="Texture" id=11]
[ext_resource path="res://sprites/buttons or icons/fraction label.png" type="Texture" id=12]
[ext_resource path="res://sprites/buttons or icons/numbers label.png" type="Texture" id=13]
[ext_resource path="res://Game Play/StudentHomePage.gd" type="Script" id=14]
[ext_resource path="res://Player/King.tscn" type="PackedScene" id=15]
[ext_resource path="res://sprites/buttons or icons/rectangular popup.png" type="Texture" id=16]
[ext_resource path="res://sprites/buttons or icons/enter tower button.png" type="Texture" id=17]
[ext_resource path="res://sprites/buttons or icons/viewleaderboard button.png" type="Texture" id=18]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=19]
[ext_resource path="res://Player/Archer.tscn" type="PackedScene" id=20]
[ext_resource path="res://Player/Samurai.tscn" type="PackedScene" id=21]
[ext_resource path="res://Player/Huntress.tscn" type="PackedScene" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 232 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 224, 296 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 224, 272 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 209.28, 304 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="StudentHomePage" type="CanvasLayer"]
script = ExtResource( 14 )
King = ExtResource( 15 )
Archer = ExtResource( 20 )
Huntress = ExtResource( 22 )
Samurai = ExtResource( 21 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2( 960, 240 )
shape = SubResource( 1 )

[node name="ChallengeButton" type="TextureButton" parent="."]
margin_left = 1499.41
margin_top = 17.0
margin_right = 1595.41
margin_bottom = 107.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MailButton" type="TextureButton" parent="."]
margin_left = 1609.76
margin_top = 10.7621
margin_right = 1714.76
margin_bottom = 105.762
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoutButton" type="TextureButton" parent="."]
margin_left = 1829.0
margin_top = 14.0
margin_right = 1911.0
margin_bottom = 94.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="."]
margin_left = 1705.08
margin_top = 11.7095
margin_right = 1826.08
margin_bottom = 105.709
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 1702.72
margin_top = 8.11893
margin_right = 1846.72
margin_bottom = 116.119
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengeLabel" type="Label" parent="."]
margin_left = 1460.31
margin_top = 122.762
margin_right = 1626.31
margin_bottom = 161.762
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "challenge"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MailLabel" type="Label" parent="."]
margin_left = 1633.69
margin_top = 123.254
margin_right = 1696.69
margin_bottom = 156.254
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "mail"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundLabel" type="Label" parent="."]
margin_left = 1728.57
margin_top = 120.779
margin_right = 1809.57
margin_bottom = 153.779
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoutLabel" type="Label" parent="."]
margin_left = 1840.11
margin_top = 119.779
margin_right = 1900.11
margin_bottom = 152.779
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreamCastleButton" type="TextureButton" parent="."]
margin_left = 3.0
margin_top = 168.0
margin_right = 456.0
margin_bottom = 827.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="CreamCastleButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CreamCastleButton/StaticBody2D"]
position = Vector2( 221, 344 )
shape = SubResource( 3 )

[node name="WoodCastleButton" type="TextureButton" parent="."]
margin_left = 768.0
margin_top = 152.0
margin_right = 1240.0
margin_bottom = 736.0
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="WoodCastleButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WoodCastleButton/StaticBody2D"]
position = Vector2( 240, 304 )
shape = SubResource( 4 )

[node name="MetalCastleButton" type="TextureButton" parent="."]
margin_left = 1472.0
margin_top = 184.0
margin_right = 1922.0
margin_bottom = 832.0
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="MetalCastleButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MetalCastleButton/StaticBody2D"]
position = Vector2( 230.72, 312 )
shape = SubResource( 5 )

[node name="RatioLabel" type="TextureRect" parent="."]
margin_left = 144.0
margin_top = 144.0
margin_right = 500.0
margin_bottom = 247.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FractionLabel" type="TextureRect" parent="."]
margin_left = 736.0
margin_top = 120.779
margin_right = 1087.0
margin_bottom = 223.779
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumbersLabel" type="TextureRect" parent="."]
margin_left = 1488.0
margin_top = 176.0
margin_right = 1855.0
margin_bottom = 278.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="TextureRect" parent="."]
margin_left = 640.0
margin_top = 312.0
margin_right = 1328.0
margin_bottom = 731.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpLabel" type="Label" parent="PopupMenu"]
margin_left = 72.0
margin_top = 64.0
margin_right = 169.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 6 )

[node name="EnterTowerButton" type="TextureButton" parent="PopupMenu"]
margin_left = 112.0
margin_top = 120.0
margin_right = 640.0
margin_bottom = 224.0
texture_normal = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewLeaderboardButton" type="TextureButton" parent="PopupMenu"]
margin_left = 112.0
margin_top = 244.0
margin_right = 600.0
margin_bottom = 358.0
texture_normal = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="PopupMenu"]
margin_left = 584.0
margin_top = 56.0
margin_right = 631.0
margin_bottom = 96.0
texture_normal = ExtResource( 19 )
expand = true

[connection signal="pressed" from="ChallengeButton" to="." method="_on_ChallengeButton_pressed"]
[connection signal="pressed" from="MailButton" to="." method="_on_MailButton_pressed"]
[connection signal="pressed" from="LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="CreamCastleButton" to="." method="_on_CreamCastleButton_pressed"]
[connection signal="pressed" from="WoodCastleButton" to="." method="_on_WoodCastleButton_pressed"]
[connection signal="pressed" from="MetalCastleButton" to="." method="_on_MetalCastleButton_pressed"]
[connection signal="pressed" from="PopupMenu/EnterTowerButton" to="." method="_on_EnterTowerButton_pressed"]
[connection signal="pressed" from="PopupMenu/ViewLeaderboardButton" to="." method="_on_ViewLeaderboardButton_pressed"]
[connection signal="pressed" from="PopupMenu/CloseButton" to="." method="_on_CloseButton_pressed"]
